<resources>
    <string name="app_name">Nachos/Alcohol</string>
    <string name="hello_world">Hello World!!!!!!</string>
    <string name="hola">hola</string>
    <string name="button">Button</string>
    <string name="Resultado">Condicion</string>
    <string name="Suma">VER</string>
    <string name="Resta">Promedio</string>
    <string name="primervalor">Fisica</string>
    <string name="segundovalor">Quimica</string>
    <string name="tercervalor">Matemáticas</string>
    <string name="Condicion">Promedio</string>
    <string name="Faltante">Falta para 10</string>
    <string name="Alimentos">Polenta o Ml</string>
    <string name="Harina">Harina</string>
    <string name="Agua">Agua</string>
    <string name="nachos">Nachos (gramos) </string>
    <string name="Alcohol">Recipiente (mililitros) </string>
    <string name="calcular">Calcular</string>
    <string name="ambos">Ingrese cantidad de polenta o ml de recipiente</string>

</resources>